Movendo os exemplos de ecmascript 6 para pasta es6

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nossa biblioteca do curso de JS com TDD na prática",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint"
   },
@@ -23,12 +23,14 @@
   },
   "homepage": "https://github.com/roneigualberto/js-tdd-course#readme",
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "husky": "^0.14.3"
+    "husky": "^0.14.3",
+    "mocha": "^5.0.0"
   }
 }
