--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nossa biblioteca do curso de JS com TDD na prática",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha tests/**/*.spec.js",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "npm test -- --watch",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint"
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/roneigualberto/js-tdd-course#readme",
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
