Aplicando o test:coverage  no pre-push

--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "npm test -- --watch",
+    "test:coverage": "nyc npm test",
     "lint": "./node_modules/.bin/eslint src/*.js",
-    "prepush": "npm run lint"
+    "prepush": "npm run lint && npm run test:coverage"
+  },
+  "nyc": {
+      "functions":80,
+      "lines": 80,
+      "check-coverage": true,
+      "reporter": ["text","html"],
+      "exclude": ["tests/**"]
   },
   "repository": {
     "type": "git",
@@ -34,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "husky": "^0.14.3",
-    "mocha": "^5.0.0"
+    "mocha": "^5.0.0",
+    "nyc": "^11.4.1"
   }
 }
